[package]
name = "plextv"
version = "0.1.0"
authors = ["James Forcier <csssuf@csssuf.net>"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }
error-chain = "=0.11.0-rc.2"
hyper = "0.11"
chrono = { version = "0.4", features = ["serde"] }
