[package]
name = "plextv"
version = "0.1.0"
authors = ["James Forcier <csssuf@csssuf.net>"]
license = "MIT/Apache-2.0"
description = "Library for plex.tv and Plex Media Server APIs."
repository = "https://github.com/csssuf/plextv-rs"
readme = "README.md"
keywords = ["plex", "media"]
categories = ["api-bindings", "multimedia", "multimedia::audio", "multimedia::video"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
hyper = "0.11.22"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs" }
